[gd_scene load_steps=4 format=2]

[ext_resource path="res://NetworkChat.gd" type="Script" id=1]
[ext_resource path="res://Menu_Theme.tres" type="Theme" id=2]
[ext_resource path="res://PanelHideButton.tscn" type="PackedScene" id=3]

[node name="NetworkChat" type="Panel"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -220.0
margin_right = 350.0
theme = ExtResource( 2 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 4.0
margin_right = -4.0
margin_bottom = -4.0
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_right = 342.0
margin_bottom = 212.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="MarginContainer/VBoxContainer"]
margin_right = 342.0
margin_bottom = 171.0
focus_mode = 2
input_pass_on_modal_close_click = false
size_flags_vertical = 3
bbcode_enabled = true
bbcode_text = "\"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.\""
text = "\"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.\""
scroll_following = true
selection_enabled = true

[node name="LineEdit" type="LineEdit" parent="MarginContainer/VBoxContainer"]
margin_top = 175.0
margin_right = 342.0
margin_bottom = 212.0
caret_blink = true

[node name="PanelHideButton" parent="." instance=ExtResource( 3 )]
DEFAULT_ANCHOR_TOP = 0.0

[connection signal="gui_input" from="MarginContainer/VBoxContainer/LineEdit" to="." method="_on_LineEdit_gui_input"]
[connection signal="text_entered" from="MarginContainer/VBoxContainer/LineEdit" to="." method="_on_LineEdit_text_entered"]
